<resources>
    <string name="app_name">MangoApp</string>
    <string name="main_desc">Take this mango and be my friend!</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_btn_text">Sign up</string>
    <string name="login_text">Have an existing account? Sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_pass">Forgot your password?</string>
    <string name="err_username_empty">Username is a required field</string>
    <string name="err_email_empty">Email is a required field</string>
    <string name="err_password_empty">Password is a required field</string>
    <string name="add_photo">Add a photo</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_message">New Message</string>
    <string name="send">Send</string>
    <string name="type_your_message">Type your message</string>

    <string name="init_menu_gender_popup_text_1">Male</string>
    <string name="init_menu_gender_popup_text_2">Female</string>
    <string name="init_menu_gender_popup_text_3">Others</string>
    <string name="init_menu_gender_popup_text_4">Do not answer</string>
    <string name="init_button_select_gender_text">Choose gender</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

</resources>