<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mangoapp.first_launch.InitialStep1">



    <item
        android:id="@+id/init_menu_gender_option_1"
        android:orderInCategory="100"
        android:title="@string/init_menu_gender_popup_text_1"
        app:showAsAction="never" />

    <item
        android:id="@+id/init_menu_gender_option_2"
        android:orderInCategory="100"
        android:title="@string/init_menu_gender_popup_text_2"
        app:showAsAction="never" />


    <item
        android:id="@+id/init_menu_gender_option_3"
        android:orderInCategory="100"
        android:title="@string/init_menu_gender_popup_text_3"
        app:showAsAction="never" />

    <item
        android:id="@+id/init_menu_gender_option_4"
        android:orderInCategory="100"
        android:title="@string/init_menu_gender_popup_text_4"
        app:showAsAction="never" />

</menu>