<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_orange"
        tools:context=".registerlogin.RegisterActivity">


        <LinearLayout
            android:id="@+id/text_fields_register"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:divider="@drawable/empty_divider"
            android:orientation="vertical"
            android:showDividers="middle"
            android:layout_marginTop="200dp"
            >

            <EditText
                android:id="@+id/username_field_register"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:background="@drawable/rounded_edit_text_field"
                android:minHeight="48dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/email_field_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:hint="@string/email_hint"
                android:background="@drawable/rounded_edit_text_field"
                android:minHeight="48dp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/password_field_register"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:background="@drawable/rounded_edit_text_field"
                android:minHeight="48dp"
                android:inputType="textPassword"/>
        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:id="@+id/send_btn_register"
            android:layout_below="@id/text_fields_register"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/register_btn_text"
            android:background="@drawable/rounded_button_login"
            />

        <TextView
            android:id="@+id/login_text"
            android:layout_below="@id/send_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_text"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/white"/>

    </RelativeLayout>
</ScrollView>